Add INNOVA catalog master data with SerpAPI market supplement
- Seed company product catalog in MySQL with source_type=innova_catalog
- ProductSearchService: catalog results first, SerpAPI market listings as supplement
- Recommendation prioritizes catalog matches from TF-IDF keywords
- TF-IDF corpus (N/df) computed from catalog products only
- API returns source_type to distinguish company vs market products

Co-authored-by: Yingzhu Chen <yingzhuchen@users.noreply.github.com>